--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.13.0"
   }
 }
